# codechecker-ls

./: LICENSE.md  README.md  pyproject.toml
codechecker_ls/: server.py
tests/: test_server.py
tests/sources/minimal_ctu/: LICENSE.txt  Makefile
